# ToolTip_Browser

./: .gitignore  Analysis of the Critical Blocker in ToolTip_Browser.md  CHROME_EXTENSION_DEVELOPMENT_PLAN.md  CMakeLists_fixed.txt  CMakeLists_minimal.txt  CMakeLists_minimal_navigrab.txt  CMakeLists_minimal_tooltip.txt  CMakeLists_original.txt  CMakeLists_real_chromium.txt  CMakeLists_test.txt  CMakeLists_tooltip_test.txt  CMakeLists_working.txt  CRITICAL_BUILD_BLOCKERS.md  DARK_MODE_BUILD_CHALLENGES.md  DAWN_BUG_BOUNTY_REPORT.md  DEVELOPMENT_STRATEGY_ANALYSIS.md  DEV_SPRINT_PLAN.md  DOCUMENTATION.md  Developer Instructions_ Integrating ToolTip_Browser into a Chromium Fork.md  FRESH_BUILD_SOLUTION.md  FULL_INTEGRATION_PLAN.md  GITHUB_UPDATE_PLAN.md  MASTER_FRESH_BUILD.bat  NATIVE_CPP_INTEGRATION_PLAN.md  NAVIGRAB_INTEGRATION_COMPLETE.md  NAVIGRAB_TEST_RESULTS.md  NEXT_STEPS_PLAN.md  PREBUILT_CHROMIUM_SUCCESS.md  PREBUILT_VS_CUSTOM_ANALYSIS.md  PROJECT_STATUS_REPORT.md  Product Requirements Document_ Chromium Fork with Tooltip Companion Functionality.md  README.md  REPOSITORY_CLEANUP_SUMMARY.md  RESEARCH_TOPICS.md  SPRINT_1_COMPLETION_REPORT.md  SPRINT_1_DAY_1_TASKS.md  SPRINT_2_DAY_1_COMPLETION.md  SPRINT_2_PLAN.md  add_tooltip_controls_to_chromium.ps1  ai_integration_plan.md  (+63 more)
Dark Mode and Easy Build Solution for Tooltip Chromium/: Solution Document_ Dark Mode and Build Challenges in ToolTip-Chromium.md  build_optimization_findings.md  dark_mode_css_injection_findings.md  dark_mode_findings.md  dawn_findings.md
chrome/browser/tooltip/: tooltip_prefs.h  tooltip_service.cc  tooltip_service.h
cmake/: chromium_fresh_config.cmake.in  chromium_playwright_config.cmake.in
dark_mode_extension/: background.js  dark_mode.css  dark_mode.js  popup.html
docs/: BUILD_PROGRESS_SUMMARY.md  COMPREHENSIVE_BUILD_ANALYSIS.md  CUSTOM_FORK_DEVELOPMENT_ROADMAP.md  DARK_MODE_IMPLEMENTATION_GUIDE.md  DAWN_ISSUE_RESOLUTION_SUMMARY.md  DAWN_WORKAROUND_STRATEGY.md  FORK_ANALYSIS_AND_RECOVERY_PLAN.md  FRESH_CHAT_NOTE.md  GITHUB_UPDATE.md  INTEGRATION_README.md  NATIVE_IMPLEMENTATION_PLAN.md  NATIVE_TOOLTIP_FILE_TRACKER.md  NATIVE_TOOLTIP_IMPLEMENTATION.md  NEXT_DEVELOPMENT_STEPS.md  README.md  SYSTEMATIC_DEBUGGING_GUIDE.md  ai_integration_plan.md  chromium_fork_analysis.md  chromium_setup_guide.md
examples/: client_side_tooltip_demo.cpp  full_integration_demo.cpp  navigrab_direct_demo.cpp  navigrab_integration_demo.cpp  proactive_scraper_demo.cpp  real_chromium_demo.cpp  test_page_automation_demo.cpp  tooltip_automation_demo.cpp  web_automation_demo_working.cpp  website_explorer_demo.cpp
src/ai/services/: ai_service_manager.py
tests/integration/: chromium_fresh_integration_test.cpp  navigrab_integration_test.cpp
