# Chromium Build Configuration for Tooltip Fork
# Optimized for development with dark mode support

# Build type - Release for better performance
is_debug = false
is_component_build = true

# Build targets - Focus on browser without GPU
target_os = "win"
target_cpu = "x64"

# Completely disable GPU service and all related components
enable_gpu = false
enable_gpu_rasterization = false
enable_gpu_memory_buffer_video_frames = false
enable_gpu_service_logging = false
enable_gpu_service = false
enable_gpu_memory_buffer_compositor_resources = false

# Disable all GPU-related services
enable_gpu_ipc_service = false
enable_gpu_command_buffer = false
enable_gpu_benchmarking = false
enable_gpu_debugging = false
enable_gpu_host_shader = false
enable_gpu_rasterization = false
enable_gpu_service = false
enable_gpu_service_logging = false
enable_gpu_service_tracing = false

# Disable hardware acceleration entirely
enable_hardware_acceleration = false
enable_oop_rasterization = false
enable_skia_renderer = false

# Symbol levels for faster builds
symbol_level = 1
blink_symbol_level = 0
v8_symbol_level = 0

# Dawn Graphics Library - Completely disable all Dawn backends
use_dawn = false
skia_use_dawn = false
use_webgpu = false
dawn_enable_d3d12 = false
dawn_enable_desktop_gl = false
dawn_enable_metal = false
dawn_enable_null = false
dawn_enable_opengles = false
dawn_enable_vulkan = false

# Additional Dawn disabling flags
dawn_use_built_dxc = false
dawn_use_swiftshader = false
dawn_use_wgpu = false
dawn_skip_validation = true
dawn_use_angle = false

# Completely exclude Dawn from build
exclude_dawn = true
disable_dawn = true

# Try to build without GPU service entirely
exclude_gpu_service = true
disable_gpu_service = true
exclude_gpu = true
disable_gpu = true

# Additional Dawn disabling flags
dawn_use_built_dxc = false
dawn_use_swiftshader = false
dawn_use_wgpu = false
dawn_skip_validation = true
dawn_use_angle = false

# GPU and graphics related flags - Complete GPU subsystem disabling
use_gpu = false
use_gl = false
use_angle = false
use_vulkan = false
use_metal = false
use_d3d11 = false
use_d3d12 = false

# Disable GPU process entirely
enable_gpu = false
enable_gpu_rasterization = false
enable_gpu_memory_buffer_video_frames = false
enable_gpu_service_logging = false

# Disable hardware acceleration
enable_hardware_acceleration = false
enable_oop_rasterization = false
enable_skia_renderer = false

# Disable graphics-related services
enable_gpu_service = false
enable_gpu_memory_buffer_compositor_resources = false

# Completely disable GPU IPC service
enable_gpu_ipc_service = false
enable_gpu_command_buffer = false
enable_gpu_benchmarking = false
enable_gpu_debugging = false
enable_gpu_host_shader = false
enable_gpu_rasterization = false
enable_gpu_service = false
enable_gpu_service_logging = false
enable_gpu_service_tracing = false

# Exclude GPU service entirely from build
exclude_unwind_tables = true
enable_gpu = false
enable_gpu_rasterization = false
enable_gpu_memory_buffer_video_frames = false
enable_gpu_service_logging = false
enable_gpu_service = false
enable_gpu_memory_buffer_compositor_resources = false

# Additional GPU disabling flags
enable_gpu_channel_media_capture = false
enable_gpu_client_logging = false
enable_gpu_memory_buffer_video_frames = false
enable_gpu_rasterization = false
enable_gpu_service = false
enable_gpu_service_logging = false
enable_gpu_service_tracing = false

# Disable GPU process entirely
enable_gpu = false
enable_gpu_rasterization = false
enable_gpu_memory_buffer_video_frames = false
enable_gpu_service_logging = false

# Disable hardware acceleration
enable_hardware_acceleration = false
enable_oop_rasterization = false
enable_skia_renderer = false

# Disable graphics-related services
enable_gpu_service = false
enable_gpu_memory_buffer_compositor_resources = false

# Windows-specific settings
target_cpu = "x64"
is_clang = true
use_lld = true

# Disable unnecessary features for faster builds
enable_nacl = false
enable_remoting = false
enable_widevine = false
enable_hangout_services_extension = false
enable_google_now = false
enable_hotwording = false
enable_webrtc = false

# Tooltip-specific features
enable_tooltip_system = true
enable_dark_mode = true

# Performance optimizations
use_goma = false
use_remoteexec = false
use_sysroot = false

# Reduce build time
chrome_pgo_phase = 0
use_thin_lto = true

# Disable tests for faster builds
is_component_build = true
symbol_level = 1

# Additional optimizations
treat_warnings_as_errors = false
use_custom_libcxx = false
use_glib = false
use_gtk = false
use_ozone = true
use_x11 = false
